whitespace issue still present

--- a/assets/stylesheets/sound_workshop.css
+++ b/assets/stylesheets/sound_workshop.css
@@ -35,3 +35,8 @@ p{
 #display_filename {
     text-decoration: underline;
 }
+
+/* #visual_output {
+    display: none;
+
+} */
